--- a/index.html
+++ b/index.html
@@ -8,5 +8,79 @@
   </head>
   <body>
 
+    <!-- Header -->
+
+    <header>
+
+      <div id="logo">
+        <img src="./ressources/images/logo.png" alt="Logo">
+        <p>SECRET AGENT SUPPLY INC.</p>
+      </div>
+
+      <div id="mainbanner">
+        <div class="news">
+          <h1>NEW ARRIVAL</h1>
+          <p>SPORT BIKES AND MOTORCYCLES</p>
+        </div>
+      </div>
+
+      <nav>
+        <ul>
+          <li>Eyewear</li>
+          <li>Apparel</li>
+          <li>Gadgets</li>
+          <li>Vehicles</li>
+          <li>Classes</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
+
+    </header>
+
+    <!-- Main -->
+
+    <div class="main">
+
+      <!-- Products -->
+
+      <div class="products">
+
+        <div class="product">
+          <img src="" alt="">
+          <p></p>
+        </div>
+
+        <div class="product">
+          <img src="" alt="">
+          <p></p>
+        </div>
+
+        <div class="product">
+          <img src="" alt="">
+          <p></p>
+        </div>
+
+        <!-- Shop -->
+
+        <div class="location">
+          <h3>Location</h3>
+          <p>-47.346436, 84.32354</p>
+        </div>
+
+        <div class="hours">
+          <h3>Hours</h3>
+          <p>0800 - 1800</p>
+        </div>
+
+      </div>
+
+    </div>
+
+    <!-- Footer -->
+
+    <footer>
+      <p>Copyright Secret Agent Supply Inc.</p>
+    </footer>
+
   </body>
 </html>
