Add desktop CSS and small HTML structure changes

--- a/index.html
+++ b/index.html
@@ -12,20 +12,28 @@
 
     <header>
 
-      <div id="logo">
-        <img src="./ressources/images/logo.png" alt="Logo">
-        <p>SECRET AGENT SUPPLY INC.</p>
+      <div id="logo" class="background-black">
+
+        <div class="container">
+          <img src="./ressources/images/logo.png" alt="Logo">
+          <span>SECRET AGENT SUPPLY INC.</span>
+        </div>
+
       </div>
 
       <div id="mainbanner">
-        <div class="news">
-          <h1>NEW ARRIVAL</h1>
-          <p>SPORT BIKES AND MOTORCYCLES</p>
+        <div class="container">
+
+          <div class="news background-black bold">
+            <h3>NEW ARRIVAL</h3>
+            <p>SPORT BIKES AND MOTORCYCLES</p>
+          </div>
+
         </div>
       </div>
 
       <nav>
-        <ul>
+        <ul class="container flex--space-between">
           <li>Eyewear</li>
           <li>Apparel</li>
           <li>Gadgets</li>
@@ -43,43 +51,57 @@
 
       <!-- Products -->
 
-      <div class="products">
+      <div class="container flex--space-between">
 
-        <div class="product">
-          <img src="" alt="">
-          <p></p>
+        <div class="product background-black">
+          <div class="frame">
+            <img src="./ressources/images/pen.png" alt="Pen">
+          </div>
+          <p>Exploding Pen</p>
         </div>
 
-        <div class="product">
-          <img src="" alt="">
-          <p></p>
+        <div class="product background-black">
+          <div class="frame">
+            <img src="./ressources/images/watch.png" alt="Watch">
+          </div>
+          <p>Cellular Watch</p>
         </div>
 
-        <div class="product">
-          <img src="" alt="">
-          <p></p>
+        <div class="product background-black">
+          <div class="frame">
+            <img src="./ressources/images/glasses.png" alt="Glasses">
+          </div>
+          <p>Thermal Glasses</p>
         </div>
 
-        <!-- Shop -->
+      </div>
 
-        <div class="location">
+
+      <!-- Shop -->
+
+      <div class="container flex--space-between">
+
+        <div class="info">
           <h3>Location</h3>
-          <p>-47.346436, 84.32354</p>
+          <span>-47.346436, 84.32354</span>
         </div>
 
-        <div class="hours">
+        <div class="info">
           <h3>Hours</h3>
-          <p>0800 - 1800</p>
+          <span>0800 - 1800</span>
         </div>
 
       </div>
 
     </div>
 
+
     <!-- Footer -->
 
-    <footer>
-      <p>Copyright Secret Agent Supply Inc.</p>
+    <footer class="background-black">
+      <div class="container">
+        <p>Copyright Secret Agent Supply Inc.</p>
+      </div>
     </footer>
 
   </body>
