--- a/index.html
+++ b/index.html
@@ -33,13 +33,17 @@
       </div>
 
       <nav>
-        <ul class="container flex--space-between">
+        <ul class="desktop-nav container flex--space-between">
           <li>Eyewear</li>
           <li>Apparel</li>
           <li>Gadgets</li>
           <li>Vehicles</li>
           <li>Classes</li>
           <li>Contact</li>
+        </ul>
+
+        <ul class="mobile-nav container">
+          <li>Menu</li>
         </ul>
       </nav>
 
@@ -53,21 +57,21 @@
 
       <div class="container flex--space-between">
 
-        <div class="product background-black">
+        <div id="pen" class="product background-black">
           <div class="frame">
             <img src="./ressources/images/pen.png" alt="Pen">
           </div>
           <p>Exploding Pen</p>
         </div>
 
-        <div class="product background-black">
+        <div id="watch" class="product background-black">
           <div class="frame">
             <img src="./ressources/images/watch.png" alt="Watch">
           </div>
           <p>Cellular Watch</p>
         </div>
 
-        <div class="product background-black">
+        <div id="glasses" class="product background-black">
           <div class="frame">
             <img src="./ressources/images/glasses.png" alt="Glasses">
           </div>
